Fixed design issue where top of page was occupied by invisible header.

--- a/www/royall_beautyfication.css
+++ b/www/royall_beautyfication.css
@@ -1,6 +1,6 @@
 /* CSS for the queen speach dashboard! */
 /* Backbround color */
-.content-wrapper{
+.content-wrapper, .skin-blue .wrapper{
   background-color: #E31836 !important; /* dannebrog red - Danish flag red */
 }
 
